--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
                                                                        redirectToPage ye funtion hai jo ham niche btayege ki is function me kya hoyega-->
             <span>Home</span>
         </div>
-        <div class="nav-item" onclick="checkLoginAndRedirect('budgeting.html')"> <!--is me jo checkLoginAndRedirect hai vo ek function hai jo ki niche btayege-->
-            <span>Budgeting</span>
+        <div class="nav-item" onclick="checkLoginAndRedirect('planning.html')"> <!--is me jo checkLoginAndRedirect hai vo ek function hai jo ki niche btayege-->
+            <span>Plan your trip</span>
         </div>
-        <div class="nav-item" onclick="checkLoginAndRedirect('cost.html')">
-            <span>Cost Estimator</span> 
+        <div class="nav-item" onclick="checkLoginAndRedirect('recommendation.html')">
+            <span>Recommendations</span> 
+        </div>
+        <div class="nav-item" onclick="checkLoginAndRedirect('destination.html')">
+            <span>Destination</span> 
+        </div>
+        <div class="nav-item" onclick="checkLoginAndRedirect('budget.html')">
+            <span>Budget Estimator</span> 
         </div>
         <div class="nav-item" onclick="redirectToPage('contact.html')">
             <span>Contact</span>
