--- a/dashboard.html
+++ b/dashboard.html
@@ -15,23 +15,23 @@
             <span>Home</span>
         </div>
 
-        <div class="nav-item" onclick="redirectToPage('Destinations.html')">
-            <span>Destinations</span>
+        <div class="nav-item" onclick="redirectToPage('planning.html')">
+            <span>Plan Your Trip</span>
         </div>
 
-        <div class="nav-item" onclick="redirectToPage('Hotels.html')">
-            <span>Hotels</span>
+        <div class="nav-item" onclick="redirectToPage('recommendation.html')">
+            <span>Recommendations</span>
         </div>
 
-        <div class="nav-item" onclick="redirectToPage('Pricing.html')">
-            <span>Pricing</span> 
+        <div class="nav-item" onclick="redirectToPage('destination.html')">
+            <span>Destination</span> 
         </div>
 
-        <div class="nav-item" onclick="redirectToPage('Review.html')">
-            <span>Review</span>
+        <div class="nav-item" onclick="redirectToPage('budget.html')">
+            <span>Budget Estimator</span>
         </div>
 
-        <div class="nav-item" onclick="redirectToPage('Contact.html')">
+        <div class="nav-item" onclick="redirectToPage('contact.html')">
             <span>Contact</span>
         </div>
         
