--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
         <div>
             <h3>Our Office</h3>
             <p>Address: DDU, Gorakhpur, India</p>
-            <p>Email: contact@travelsmart.com</p>
+            <p>Email: </p>
             <p>Phone: +91 123 456 7890</p>
         </div>
 
