--- a/dashboard.html
+++ b/dashboard.html
@@ -15,23 +15,14 @@
              <span>Home</span>
          </div>
  
-         <div class="nav-item" onclick="redirectToPage('Destinations.html')">
-             <span>Destinations</span>
+         <div class="nav-item" onclick="redirectToPage('budgeting.html')"> 
+             <span>Budgeting</span>
+         </div>
+         <div class="nav-item" onclick="redirectToPage('cost.html')">
+             <span>Cost Estimator</span> 
          </div>
  
-         <div class="nav-item" onclick="redirectToPage('Hotels.html')">
-             <span>Hotels</span>
-         </div>
- 
-         <div class="nav-item" onclick="redirectToPage('Pricing.html')">
-             <span>Pricing</span> 
-         </div>
- 
-         <div class="nav-item" onclick="redirectToPage('Review.html')">
-             <span>Review</span>
-         </div>
- 
-         <div class="nav-item" onclick="redirectToPage('Contact.html')">
+         <div class="nav-item" onclick="redirectToPage('contact.html')">
              <span>Contact</span>
          </div>
          
